src/test/ui/suggestions/trait-with-missing-associated-type-restriction-fixable.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:13:9
   |
LL |         qux(x.func())
   |         ^^^^--------^
   |             |
   |             expected `usize`, found `<impl Trait as Trait>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:41:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |         qux({usize})
   |         ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:17:9
   |
LL |         qux(x.func())
   |         ^^^^--------^
   |             |
   |             expected `usize`, found `<T as Trait>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:41:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |         qux({usize})
   |         ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:22:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `<impl Trait as Trait>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:41:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:26:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `<T as Trait>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:41:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:30:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `<impl Trait<i32> as Trait<i32>>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:41:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:34:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `<T as Trait<i32>>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:41:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:38:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `<T as Trait>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction-fixable.rs:41:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0308`.
